--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,34 @@
-# ── LLM Provider ──────────────────────────
-# Uncomment and set the API key for your provider
-# OPENROUTER_API_KEY=sk-or-v1-xxx
-# ZHIPU_API_KEY=xxx
-# ANTHROPIC_API_KEY=sk-ant-xxx
-# OPENAI_API_KEY=sk-xxx
-# GEMINI_API_KEY=xxx
-# CEREBRAS_API_KEY=xxx
+# ══════════════════════════════════════════════════════════
+# PicoClaw Environment Variables (Coolify Deployment)
+# ══════════════════════════════════════════════════════════
 
-# ── Chat Channel ──────────────────────────
-# TELEGRAM_BOT_TOKEN=123456:ABC...
+# ── LLM Provider (Required) ────────────────────────────────
+# Using OpenRouter for cost-effective multi-model access
+OPENROUTER_API_KEY=
+
+# ── Chat Channel: Telegram (Required) ──────────────────────
+# Get your bot token from https://t.me/BotFather
+TELEGRAM_BOT_TOKEN=
+
+# ── Timezone ───────────────────────────────────────────────
+# Set to your local timezone (Europe/Lisbon, America/New_York, etc)
+TZ=Europe/Lisbon
+
+# ══════════════════════════════════════════════════════════
+# ALTERNATIVE PROVIDERS (Optional - uncomment if needed)
+# ══════════════════════════════════════════════════════════
+
+# OpenAI API Key (for GPT models)
+# OPENAI_API_KEY=sk-proj-xxx
+
+# Anthropic/Claude API Key (direct, not via OpenRouter)
+# ANTHROPIC_API_KEY=sk-ant-xxx
+
+# Alternative Chat Channels
 # DISCORD_BOT_TOKEN=xxx
+# SLACK_BOT_TOKEN=xoxb-xxx
 # LINE_CHANNEL_SECRET=xxx
 # LINE_CHANNEL_ACCESS_TOKEN=xxx
 
-# ── Web Search (optional) ────────────────
+# Optional: Brave Search API for web search capability
 # BRAVE_SEARCH_API_KEY=BSA...
-
-# ── Timezone ──────────────────────────────
-TZ=Asia/Tokyo
