refactor: move deployment docs to local folder, use environment variables for configuration
- Move deployment documentation to deployment-docs/ (local, not committed)
- Add deployment-docs/ to .gitignore to prevent exposing infrastructure info
- Update .env.example with COOLIFY_DOMAIN, COOLIFY_PORT, APP_PORT variables
- Replace hardcoded URLs in documentation with  placeholders
- Documentation now uses environment variables for domain and port configuration
- Security: No infrastructure details exposed in public repository

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,20 @@
 # PicoClaw Environment Variables (Coolify Deployment)
 # ══════════════════════════════════════════════════════════
 
+# ── Deployment Configuration ───────────────────────────────
+# Configure these in Coolify UI (Settings → Environment Variables)
+# These are used by deployment documentation scripts
+
+# Your external domain for accessing Coolify and PicoClaw
+# Example: pico.louvps01.my.id, my-domain.com
+COOLIFY_DOMAIN=
+
+# Coolify Dashboard Port (typically 3000)
+COOLIFY_PORT=3000
+
+# PicoClaw Application Port (typically 18790)
+APP_PORT=18790
+
 # ── LLM Provider (Required) ────────────────────────────────
 # Using OpenRouter for cost-effective multi-model access
 OPENROUTER_API_KEY=
